- THROTTLING and FAST_BADWORD_REPLACE cannot be configured in config.h reported by raymondvrolijk (#0002937).
- /sqline supports sqlining for channels. #*ble* will forbid channels and *ble* will forbid only nicks (not channels).
  Forbid message showed by numeric ERR_FORBIDDENCHANNEL (448) reported by aragon and Jase (#0000935, #0003012).
- conf_deny NOTICE message is replace by ERR_FORBIDDENCHANNEL.
- Fixed possible crash with using quarantine, reported by Sephiroth (#0003151).
- Showing even more SSL server errors now, hopefully all of them, also changed the
  error notice a bit so it's much more like non-SSL server link errors. Reported by
  vonitsanet (#0003150).
- Added TOKEN (#) and STATS (2) to serverprotocol.html.
- Fixed STATS protocol description - servers must not do /stats themselves.
- Italic fix in serverprotocol
- Fixed bug where SVSO was unable to give various operflags such as q, d, X, reported
  by prodigy2k7 (#0003203).
- /WHOIS now shows the ident of local users - if ident enabled and they had an ident -
  instead of always "*" in the 'is connecting from' line. Suggested and patch provided
  by djGrrr (#0002888).
  NOTE: This needs checking, this patch changed the 'unknown' stuff to ~.. doublecheck
  the allow block and everything.. didn't we use unknown@ there sometimes? I'll leave this
  to someone else...
- Added ability to enable "no fake lag" for a user through through services via the
  new commands SVSNOLAG/SVS2NOLAG (syntax: SVSNOLAG [+|-] NickName). Obviously, care
  should be taken when giving such access to a user since he/she will be able to flood
  at full speed and could possibly take down the entire IRCd (well, everyone on it).
  Suggested by avb, coded by djGrrr.
- Fixed SDESC not messaging +s +s clients on local server when it is used, reported by
  dre, patch provided by djGrrr.
- Fixed SAPART causing a flood of notices from all servers, fun. Reported and patch
  provided by djGrrr.