@@ -10,15 +10,18 @@ if [ "$1" = "start" ] ; then
 	@BINDIR@
 	sleep 1
 	if [ ! -r $PID_FILE ] ; then
-		echo "Possible error encountered (IRCd seemingly not started)"	
-		echo "====================================================="
-		echo "Check above for possible errors, and this output of  "
-		echo "ircd.log. If you cannot solve the problem, read"
-		echo "Unreal.nfo on where to get support"
-		echo "====================================================="
-		tail -n 5 @IRCDDIR@/ircd.log
-		if [ -r $PID_BACKUP ] ; then
-			mv -f $PID_BACKUP $PID_FILE
+		sleep 4
+		if [ ! -r $PID_FILE ] ; then
+			echo "Possible error encountered (IRCd seemingly not started)"	
+			echo "====================================================="
+			echo "Check above for possible errors, and this output of  "
+			echo "ircd.log. If you cannot solve the problem, read"
+			echo "Unreal.nfo on where to get support"
+			echo "====================================================="
+			tail -n 5 @IRCDDIR@/ircd.log
+			if [ -r $PID_BACKUP ] ; then
+				mv -f $PID_BACKUP $PID_FILE
+			fi
 		fi
 	fi
 elif [ "$1" = "stop" ] ; then
