@@ -1529,3 +1529,6 @@
   dre, patch provided by djGrrr.
 - Fixed SAPART causing a flood of notices from all servers, fun. Reported and patch
   provided by djGrrr.
+- Booting ircd waits for 1 second to check if runs correctly. If not, waits for 4 more seconds 
+  to check again, suggested by vonitsanet (#0003136).
+
